--- a/public/css/main.css
+++ b/public/css/main.css
@@ -18,6 +18,19 @@
 
 }
 
+
+#logout {
+    
+    
+    font-weight: bold;
+}
+
+#logout_l {
+
+position: relative;
+
+}
+
 #welcome {
 padding-top: 1em;
     background: #072754;
@@ -134,6 +147,126 @@ color: white;
     padding-top: 4em;
 
 }
+
+
+.footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  /* Set the fixed height of the footer here */
+  height: 40px;
+  background: #FFD100;
+}
+
+
+#footer1{
+    
+    text-align: center;
+    font-weight: bold;
+}
+
+
+#dashboard_t {
+
+padding-top: 1em;
+
+}
+
+
+#welcome_user {
+
+color: #072754;
+font-weight: bold;
+font-size: 1em;
+text-align: center;
+
+
+}
+
+
+.info-box {
+    
+  display: block;
+  min-height: 75px;
+  background: #fff;
+  width: 100%;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.1);
+  border-radius: 2px;
+  margin-bottom: 15px;
+}
+
+
+.info-box-icon {
+  border-top-left-radius: 2px;
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 2px;
+  display: block;
+  float: left;
+  height: 75px;
+  width: 90px;
+  text-align: center;
+  font-size: 45px;
+  line-height: 90px;
+  background: rgba(0, 0, 0, 0.2);
+}
+.info-box-icon > img {
+  max-width: 100%;
+}
+.info-box-content {
+  padding: 5px 10px;
+  margin-left: 90px;
+}
+.info-box-number {
+  display: block;
+  font-size: 12px;
+  text-align: center;
+}
+
+
+.info-box-text {
+  display: block;
+  font-size: 14px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+.info-box-text {
+  text-transform: uppercase;
+    font-weight: bold;
+    text-align: center;
+}
+
+
+.bg-orange {
+
+
+background-color: #E1410A;
+
+}
+
+.bg-green {
+
+    background-color: #006B53;
+
+}
+
+
+.bg-blue {
+
+background-color: #0047AB;
+
+
+}
+
+.bg-darkred {
+    
+    background-color: #AD0615;
+
+
+}
+
+
 
 .modal-footer {   border-top: 0px; }
 
