--- a/public/css/main.css
+++ b/public/css/main.css
@@ -175,7 +175,7 @@ color: white;
 
 
 .footer {
-  position: absolute;
+  position: fixed;
   bottom: 0;
   width: 100%;
   /* Set the fixed height of the footer here */
