--- a/public/css/main.css
+++ b/public/css/main.css
@@ -97,11 +97,6 @@ color: #FFD100;
 #welcome_user2 {
     
     font-weight: bold;
-    
-
-
-
-
 }
 
 
@@ -266,7 +261,7 @@ background-color: #072754;
 
 .link_color {
 
-color: #FFD100;
+color: #900902;
 
 
 }
