changing color icon

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -20,7 +20,7 @@
 
 a:hover {
 
-color: dimgray;
+color: #072754;
 
 }
 
@@ -171,7 +171,7 @@ color: white;
 
 #icon {
 
-    color: white;
+    color: #FFD100;
 
 }
 
