testing autocomplete jquery

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -327,6 +327,12 @@ font-weight: bold;
 }
 
 
+
+.ui-autocomplete-loading {
+    background: white url("../img/squares.gif") right center no-repeat;
+  }
+
+
 #welcome_user1 {
 
 font-weight: bold;
