--- a/public/css/main.css
+++ b/public/css/main.css
@@ -127,7 +127,8 @@ ul.alert-dropdown {
     .side-nav li a:hover,
     .side-nav li a:focus {
         outline: none;
-        background-color: #000 !important;
+        background-color: #FFD100 !important;
+        font-weight: bold;
     }
 }
 
