--- a/public/css/main.css
+++ b/public/css/main.css
@@ -419,6 +419,13 @@ color: white;
     background: #072754;
 }
 
+#intro {
+
+    text-align:justify;
+    font-weight:bold;
+    font-size: 0.5em;
+}
+
 
 
 
